tile bg image and color alignment fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -327,7 +327,7 @@ button#open-mapping {
 
 .app-bar .title {
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 700;
   color: #1f2937;
   margin: 0;
 }
@@ -721,7 +721,7 @@ h5#current-page-title {
   background-color: #ffffff;
   width: fit-content;
   margin: 20px auto;
-  gap: 0.2rem;
+  gap: 0.13rem;
 }
 
 .color-palette .color-item {
